--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,8 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-web-sys = "0.3.61"
-yew = { version = "0.20.0", features = ["csr"] }
+[lib]
+path = "src/lib.rs"
 
 [profile.release]
 # less code to include into binary
@@ -18,3 +17,8 @@ codegen-units = 1
 lto = true
 # optimization for size
 opt-level = "s"
+
+[dependencies]
+web-sys = "0.3.61"
+yew = { version = "0.20.0", features = ["csr"] }
+# mimalloc = { version = "0.1.36", default-features = false }
