use sparse protocal to speed up crates indexing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,5 @@
     "files.associations": {
         "*.css": "tailwindcss",
     },
-    "codesnap.showWindowTitle": true
+    "codesnap.showWindowTitle": true,
 }
