make some directories readonly in vscode

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,7 @@
-# ----------------------------------------
-# 减少需要下载的第三方 crate 数据体积, 详见:
-# https://rust-lang.github.io/rfcs/2789-sparse-index.html
-# ----------------------------------------
-[registries.crates-io]
-protocol = "sparse"
+# Workspace cargo config.
+# See more on The Cargo Book:
+# https://doc.rust-lang.org/cargo/reference/config.html
+
+# sparse protocol is supported by default since rust v1.70.
+# [registries.crates-io]
+# protocol = "sparse"
