--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+    "files.readonlyInclude": {
+        "dist/**/*": true,
+        "node_modules/**/*": true,
+    },
     "cSpell.words": [
         "binaryen",
         "mimalloc",
