--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "devDependencies": {
-        "binaryen": "^113.0.0",
-        "tailwindcss": "^3.3.2"
+        "binaryen": "114.0.0",
+        "tailwindcss": "3.3.2"
     }
 }
