update yew to 0.21.0
update README.md

--- a/Trunk.toml
+++ b/Trunk.toml
@@ -7,8 +7,8 @@ public_url = "/"
 address = "127.0.0.1"
 # The port to serve on.
 port = 8080
-# Open a browser tab once the initial build is complete.
-open = true
+# Whether to Open a browser tab once the initial build is complete.
+open = false
 # Disable auto-reload of the web app.
 no_autoreload = false
 
