--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "yew_demo"
 version = "0.1.0"
 edition = "2021"
+authors = ["Yusong Lai <yusong.lai@icloud.com>"]
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,6 +17,6 @@ lto = true        # enable link time optimization
 opt-level = "z"   # optimize for size
 
 [dependencies]
-web-sys = "0.3.62"
+web-sys = "0.3.66"
 yew = { version = "0.21.0", features = ["csr"] }
 yew-router = "0.18.0"
